--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
         </span>
       </h3>
       <p class="u-align-center u-custom-font u-font-georgia u-text u-text-6">
-        <span style="font-size: 0.875rem;">Банкетный зал "Особняк Путилова"<br>Сантк-Петербург, просп. Динамо 2Б<br>
+        <span style="font-size: 0.875rem;">Банкетный зал "Особняк Путилова"<br>Санкт-Петербург, просп. Динамо 2Б<br>
         </span>
       </p>
       <div class="u-grey-light-2 u-map u-map-1">
