--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
         <div class="u-countdown u-countdown-1" data-timer-id="c95c" data-type="to-date" data-target-date="Thu, 21 Jul 2022 21:08:11 GMT" data-for="everyone" data-direction="down" data-target-number="100" data-frequency="1s" data-start-time="Sat, 05 Feb 2022 08:37:55 GMT" data-time-left="750m" data-count-animation="slide" data-after-count="none" data-redirect-url="https://">
           <div class="u-countdown-wrapper u-spacing-5">
             <div class="u-countdown-item u-countdown-years u-hidden u-spacing-5">
-              <div class="u-countdown-counter u-custom-font u-font-georgia u-countdown-counter-1"><div class="u-countdown-number">0</div><div class="u-countdown-number u-hidden">0</div></div>
+              <div class="u-countdown-counter u-custom-font u-font-georgia u-countdown-counter-1"><div class="u-countdown-number">0</div></div>
               <div class="u-countdown-label u-countdown-label-1">Years</div>
             </div>
             <div class="u-countdown-separator u-custom-font u-font-georgia u-hidden u-countdown-separator-1">:</div>
