--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
             </div>
             <div class="u-countdown-separator u-custom-font u-font-georgia u-hidden u-countdown-separator-1">:</div>
             <div class="u-countdown-days u-countdown-item u-spacing-5">
-              <div class="u-countdown-counter u-custom-font u-font-georgia u-countdown-counter-2"><div class="u-countdown-number">1</div><div class="u-countdown-number">6</div><div class="u-countdown-number">6</div></div>
+              <div class="u-countdown-counter u-custom-font u-font-georgia u-countdown-counter-2"><div class="u-countdown-number">1</div><div class="u-countdown-number">6</div></div>
               <div class="u-countdown-label u-countdown-label-2">Дней</div>
             </div>
             <div class="u-countdown-separator u-custom-font u-font-georgia u-countdown-separator-2">:</div>
