--- a/index.html
+++ b/index.html
@@ -120,11 +120,11 @@
         </span>
       </p>
       <h1 class="u-align-center u-custom-font u-font-georgia u-text u-text-3">
-        <span style="font-size: 2.25rem;" class="u-text-palette-2-dark-2">Мы жени​мся!<br>
+        <span style="font-size: 2.25rem;" class="u-text-palette-2-dark-2">Мы женимся!<br>
         </span>
       </h1>
       <p class="u-align-justify u-custom-font u-font-georgia u-text u-text-4">
-        <span style="font-size: 0.875rem;">И очень хотим разделить с вами этот счастливый праздник. Будет рады видеть вас на нашей свадьбе!<br>
+        <span style="font-size: 0.875rem;">И очень хотим разделить с вами этот счастливый праздник. Будем рады видеть вас на нашей свадьбе!<br>
         </span>
       </p>
       <img class="u-image u-image-default u-preserve-proportions u-image-3" src="images/Group_94.svg" alt="" data-image-width="233" data-image-height="234">
